--- a/src/assets/styles/_class.scss
+++ b/src/assets/styles/_class.scss
@@ -6,6 +6,13 @@
     }
 }
 
+$warning: #faad14;
+.hover-yellow {
+    &:hover {
+        color: $warning;
+    }
+}
+
 .pt-header {
     padding-top: 65px;
 }
@@ -39,4 +46,8 @@ $primary: #1890ff;
 $bg-suc: #1aff1a;
 .bg-success {
     background-color: $bg-suc;
+}
+
+.bg-background-image {
+    background-image: url('../image/bg/bg-2.jpg');
 }
